services/ui/ui.yaml
---
# Source: ui/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    helm.sh/chart: ui-0.8.2
    app.kubernetes.io/name: ui
    app.kubernetes.io/instance: ui
    app.kubernetes.io/component: service
    app.kuberneres.io/owner: retail-store-sample
    app.kubernetes.io/managed-by: Helm
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ui
    app.kubernetes.io/instance: ui
    app.kubernetes.io/component: service
    app.kuberneres.io/owner: retail-store-sample
# ---
# # Source: ui/templates/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: ui
#   labels:
#     helm.sh/chart: ui-0.8.2
#     app.kubernetes.io/name: ui
#     app.kubernetes.io/instance: ui
#     app.kubernetes.io/component: service
#     app.kuberneres.io/owner: retail-store-sample
#     app.kubernetes.io/managed-by: Helm
# spec:
#   replicas: 1
#   strategy:
#     rollingUpdate:
#       maxUnavailable: 1
#     type: RollingUpdate
#   selector:
#     matchLabels:
#       app.kubernetes.io/name: ui
#       app.kubernetes.io/instance: ui
#       app.kubernetes.io/component: service
#       app.kuberneres.io/owner: retail-store-sample
#   template:
#     metadata:
#       annotations:
#         prometheus.io/path: /actuator/prometheus
#         prometheus.io/port: "8080"
#         prometheus.io/scrape: "true"
#       labels:
#         app.kubernetes.io/name: ui
#         app.kubernetes.io/instance: ui
#         app.kubernetes.io/component: service
#         app.kuberneres.io/owner: retail-store-sample
#     spec:
#       serviceAccountName: ui
#       securityContext:
#         fsGroup: 1000
#       containers:
#         - name: ui
#           env:
#             - name: JAVA_OPTS
#               value: -XX:MaxRAMPercentage=75.0 -Djava.security.egd=file:/dev/urandom
#           envFrom:
#             - configMapRef:
#                 name: ui
#           securityContext:
#             capabilities:
#               add:
#               - NET_BIND_SERVICE
#               drop:
#               - ALL
#             readOnlyRootFilesystem: true
#             runAsNonRoot: true
#             runAsUser: 1000
#           image: "public.ecr.aws/aws-containers/retail-store-sample-ui:0.8.2"
#           imagePullPolicy: IfNotPresent
#           ports:
#             - name: http
#               containerPort: 8080
#               protocol: TCP
#           livenessProbe:
#             httpGet:
#               path: /actuator/health/liveness
#               port: 8080
#             initialDelaySeconds: 45
#             periodSeconds: 3
#           resources:
#             limits:
#               memory: 512Mi
#             requests:
#               cpu: 128m
#               memory: 512Mi
#           volumeMounts:
#             - mountPath: /tmp
#               name: tmp-volume
#       volumes:
#         - name: tmp-volume
#           emptyDir:
#             medium: Memory
